--- a/.gitignore
+++ b/.gitignore
@@ -29,14 +29,17 @@ build/
 gradle-app.setting
 !gradle-wrapper.jar
 
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
+
+##############################
+## IntelliJ
+##############################
+out/
+.idea/
+.idea_modules/
 *.iml
 *.ipr
+*.iws
+
 
 ### Eclipse ###
 .apt_generated
