HW-2 Added clients and scheduler

--- a/WebContentUpdateService/scrapper/src/main/resources/application.properties
+++ b/WebContentUpdateService/scrapper/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 app.test="scrapperValue"
+springdoc.swagger-ui.path=/swagger-ui
+#server.port=8080
+github.api.base-url=https://api.github.com
+stackoverflow.api.base-url=https://api.stackexchange.com/2.3
+app.scheduler.interval=10s
