HW-3 Added Bot, tests, Bot-Scrapper-Client

--- a/WebContentUpdateService/scrapper/src/main/resources/application.properties
+++ b/WebContentUpdateService/scrapper/src/main/resources/application.properties
@@ -2,5 +2,11 @@ app.test="scrapperValue"
 springdoc.swagger-ui.path=/swagger-ui
 #server.port=8080
 github.api.base-url=https://api.github.com
+github.api.default-base-url=https://api.github.com
 stackoverflow.api.base-url=https://api.stackexchange.com/2.3
+stackoverflow.api.default-base-url=https://api.stackexchange.com/2.3
 app.scheduler.interval=10s
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_NAME}
+spring.datasource.password=${DB_PASSWORD}
+
