--- a/WebContentUpdateService/bot/src/main/resources/application.properties
+++ b/WebContentUpdateService/bot/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 app.test="botValue"
 springdoc.swagger-ui.path=/swagger-ui
+server.port=8081
+bot.token=${BOT_TOKEN}
+bot.name=${BOT_NAME}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_NAME}
+spring.datasource.password=${DB_PASSWORD}
+scrapper.api.base-url=http://127.0.0.1:8080
+scrapper.api.default-base-url=http://127.0.0.1:8080
