HW5 -- added bot client and improved scheduler

--- a/WebContentUpdateService/scrapper/src/main/resources/application.properties
+++ b/WebContentUpdateService/scrapper/src/main/resources/application.properties
@@ -6,7 +6,10 @@ github.api.default-base-url=https://api.github.com
 stackoverflow.api.base-url=https://api.stackexchange.com/2.3
 stackoverflow.api.default-base-url=https://api.stackexchange.com/2.3
 app.scheduler.interval=10s
+link.update.interval=PT10M
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_NAME}
 spring.datasource.password=${DB_PASSWORD}
+bot.api.base-url=http://127.0.0.1:8081
+bot.api.default-base-url=http://127.0.0.1:8081
 
