--- a/WebContentUpdateService/scrapper/pom.xml
+++ b/WebContentUpdateService/scrapper/pom.xml
@@ -16,6 +16,8 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <liquibase.version>4.3.5</liquibase.version>
+        <spring-boot-starter-data-jdbc.version>3.0.4</spring-boot-starter-data-jdbc.version>
+
     </properties>
 
     <dependencies>
@@ -76,6 +78,24 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.8.2</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jdbc</artifactId>
+            <version>${spring-boot-starter-data-jdbc.version}</version>
         </dependency>
 
         <dependency>
