--- a/WebContentUpdateService/scrapper/pom.xml
+++ b/WebContentUpdateService/scrapper/pom.xml
@@ -103,6 +103,10 @@
             <artifactId>spring-dotenv</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>jooq</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
