--- a/WebContentUpdateService/scrapper/src/main/resources/application.properties
+++ b/WebContentUpdateService/scrapper/src/main/resources/application.properties
@@ -12,4 +12,5 @@ spring.datasource.username=${DB_NAME}
 spring.datasource.password=${DB_PASSWORD}
 bot.api.base-url=http://127.0.0.1:8081
 bot.api.default-base-url=http://127.0.0.1:8081
+app.database-access-type=jpa
 
