HW7 -- added RabbitMQ integration

--- a/WebContentUpdateService/scrapper/src/main/resources/application.properties
+++ b/WebContentUpdateService/scrapper/src/main/resources/application.properties
@@ -13,4 +13,10 @@ spring.datasource.password=${DB_PASSWORD}
 bot.api.base-url=http://127.0.0.1:8081
 bot.api.default-base-url=http://127.0.0.1:8081
 app.database-access-type=jpa
+app.useQueue=true
+rabbitmq.direct-exchange=scrapper-bot-exchange
+rabbitmq.queue=scrapper-bot-queue
+rabbitmq.routing-key=scrapper-bot-routing-key
+rabbitmq.dlx-postfix=.dlx
+rabbitmq.dlq-postfix=.dlq
 
