--- a/WebContentUpdateService/bot/src/main/resources/application.properties
+++ b/WebContentUpdateService/bot/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.datasource.username=${DB_NAME}
 spring.datasource.password=${DB_PASSWORD}
 scrapper.api.base-url=http://127.0.0.1:8080
 scrapper.api.default-base-url=http://127.0.0.1:8080
+rabbitmq.direct-exchange=scrapper-bot-exchange
+rabbitmq.queue=scrapper-bot-queue
+rabbitmq.routing-key=scrapper-bot-routing-key
+rabbitmq.dlx-postfix=.dlx
+rabbitmq.dlq-postfix=.dlq
+app.useQueue=true
