--- a/WebContentUpdateService/docker-compose.yml
+++ b/WebContentUpdateService/docker-compose.yml
@@ -30,8 +30,19 @@ services:
     networks:
       - backend
 
+  rabbitmq:
+    image: rabbitmq:3-management
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    networks:
+      - backend
+
 volumes:
   postgres_data:
+  rabbitmq_data:
 
 networks:
   backend:
