--- a/WebContentUpdateService/pom.xml
+++ b/WebContentUpdateService/pom.xml
@@ -13,6 +13,7 @@
         <module>link-parser</module>
         <module>scrapper</module>
         <module>scrapper-jooq</module>
+        <module>messages</module>
     </modules>
 
     <properties>
