--- a/WebContentUpdateService/.github/workflows/scrapper.yml
+++ b/WebContentUpdateService/.github/workflows/scrapper.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '17'
-        #distribution: 'temurin'
+        distribution: 'temurin'
         cache: maven
     - name: Build scrapperApp with Maven
       run: mvn package -pl scrapper -am -DskipTests=true
