--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -10,8 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
   steps:
-  - name: Checkout
-    uses: actions/checkout@v3
+  - uses: actions/checkout@v3
   - name: Set up JDK17
     uses: actions/setup-java@v3
     with:
