--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -2,15 +2,13 @@ name: Java Scrapper CI
 on:
   push:
     paths:
-      - scrapper/**
+      - 'scrapper/**'
   pull_request:
     paths:
-      - scrapper/**
+      - 'scrapper/**'
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      packages: write
 
     steps:
     - uses: actions/checkout@v3
@@ -18,8 +16,8 @@ jobs:
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: "17"
-        distribution: temurin
+        java-version: '17'
+        distribution: 'temurin'
         cache: maven
         
     - name: Build scrapperApp with Maven
