--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -4,15 +4,15 @@ on:
   push:
     branches: [ "main", "hw8" ]
     paths:
-      - 'scrapper/**'
-      - 'messages/**'
-      - 'link-parser/**'
+    - 'WebContentUpdateService/scrapper/**'
+    - 'WebContentUpdateService/messages/**'
+    - 'WebContentUpdateService/link-parser/**'
   pull_request:
     branches: [ "main", "hw8" ]
     paths:
-      - 'scrapper/**'
-      - 'messages/**'
-      - 'link-parser/**'
+    - 'WebContentUpdateService/scrapper/**'
+    - 'WebContentUpdateService/messages/**'
+    - 'WebContentUpdateService/link-parser/**'
 
 jobs:
   build:
