HW8 -- added github actions -- test11v3

--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -26,4 +26,5 @@ jobs:
           cache: maven
 
       - name: Build botApp with Maven
-        run: mvn package -pl WebContentUpdateService/bot -am -DskipTests=true
+        working-directory: WebContentUpdateService
+        run: mvn package -pl bot -am -DskipTests=true
