HW8 -- added github actions -- bot and scrapper dockerfiles

--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -28,3 +28,7 @@ jobs:
       - name: Build botApp with Maven
         working-directory: WebContentUpdateService
         run: mvn package -pl bot -am -DskipTests=true
+
+      - name: Build botDocker image
+        working-directory: WebContentUpdateService/bot
+        run: docker build -t bot-app:latest .
