HW8 -- added github actions -- test12v2_3

--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -14,7 +14,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}/bot-app
+  IMAGE_NAME: ${{ github.repository }}/bot-app | toLower
 
 jobs:
   build:
