--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -16,7 +16,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}/scrapper-app
+  IMAGE_NAME: ${{ github.repository }}/scrapper-app | toLower
 
 jobs:
   build:
