HW8 -- added github actions -- test12v4

--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -12,6 +12,9 @@ on:
     - 'WebContentUpdateService/bot/**'
     - 'WebContentUpdateService/messages/**'
 
+permissions:
+  packages: write
+
 env:
   REGISTRY: ghcr.io
 
