--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -33,6 +33,10 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - name: Run Checkstyle
+        working-directory: WebContentUpdateService
+        run: mvn -pl scrapper -am checkstyle:check
+
       - name: Build scrapperApp with Maven
         working-directory: WebContentUpdateService
         run: mvn package -pl scrapper -am -DskipTests=true
