--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -19,6 +19,20 @@ env:
   REGISTRY: ghcr.io
 
 jobs:
+  CheckStyle:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Run Checkstyle
+        working-directory: WebContentUpdateService
+        run: mvn -pl bot -am checkstyle:check -Dcheckstyle.config.location=${{ github.workspace }}/checkstyle.xml
+
   build:
     runs-on: ubuntu-latest
 
@@ -30,10 +44,6 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-
-      - name: Run Checkstyle
-        working-directory: WebContentUpdateService
-        run: mvn -pl bot -am checkstyle:check -Dcheckstyle.config.location=${{ github.workspace }}/checkstyle.xml
 
       - name: Build botApp with Maven
         working-directory: WebContentUpdateService
