--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -19,7 +19,7 @@ env:
   REGISTRY: ghcr.io
 
 jobs:
-  CheckStyle:
+  Checkstyle:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -31,7 +31,7 @@ jobs:
 
       - name: Run Checkstyle
         working-directory: WebContentUpdateService
-        run: mvn -pl bot -am checkstyle:check -Dcheckstyle.config.location=${{ github.workspace }}/checkstyle.xml
+        run: mvn -pl bot -am checkstyle:check
 
   build:
     runs-on: ubuntu-latest
