--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -21,6 +21,20 @@ env:
   REGISTRY: ghcr.io
 
 jobs:
+  Checkstyle:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Run Checkstyle
+        working-directory: WebContentUpdateService
+        run: mvn -pl scrapper -am checkstyle:check
+
   build:
     runs-on: ubuntu-latest
 
@@ -32,10 +46,6 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-
-      - name: Run Checkstyle
-        working-directory: WebContentUpdateService
-        run: mvn -pl scrapper -am checkstyle:check
 
       - name: Build scrapperApp with Maven
         working-directory: WebContentUpdateService
