--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Run Checkstyle
         working-directory: WebContentUpdateService
-        run: mvn -pl bot -am checkstyle:check
+        run: mvn -pl bot -am checkstyle:check -e
 
   build:
     runs-on: ubuntu-latest
