--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Run Checkstyle
         working-directory: WebContentUpdateService
-        run: mvn -pl scrapper -am checkstyle:check
+        run: mvn -pl scrapper -am checkstyle:check -e
 
   build:
     runs-on: ubuntu-latest
