hw9 -- added -- grafana, prometheus

--- a/WebContentUpdateService/scrapper/src/main/resources/application.properties
+++ b/WebContentUpdateService/scrapper/src/main/resources/application.properties
@@ -20,3 +20,10 @@ rabbitmq.routing-key=scrapper-bot-routing-key
 rabbitmq.dlx-postfix=.dlx
 rabbitmq.dlq-postfix=.dlq
 
+#Metrics
+management.server.port=8090
+management.endpoints.web.base-path=/
+management.endpoints.web.exposure.include=info,health,prometheus
+management.endpoints.web.path-mapping.prometheus=/metrics
+spring.application.name=scrapper
+management.metrics.tags.application=${spring.application.name}
