--- a/WebContentUpdateService/bot/src/main/resources/application.properties
+++ b/WebContentUpdateService/bot/src/main/resources/application.properties
@@ -14,3 +14,11 @@ rabbitmq.routing-key=scrapper-bot-routing-key
 rabbitmq.dlx-postfix=.dlx
 rabbitmq.dlq-postfix=.dlq
 app.useQueue=true
+
+#Metrics
+management.server.port=8091
+management.endpoints.web.base-path=/
+management.endpoints.web.exposure.include=info,health,prometheus
+management.endpoints.web.path-mapping.prometheus=/metrics
+spring.application.name=bot
+management.metrics.tags.application=${spring.application.name}
